Fix build for WD_SOFTBADSECT option.  PR kern/52814

XXX No clue if this option actually works.  This fix just makes it
XXX compile without error.